feat: generate api service based on openapi docs
