# src/app/web-api/models.ts
@@ -1,0 +1,4 @@
+/* tslint:disable */
+/* eslint-disable */
+export { HabitRequest } from './models/habit-request';
+export { HabitResponse } from './models/habit-response';
