# src/app/web-api/models/habit-request.ts
@@ -1,0 +1,5 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface HabitRequest {
+  name?: string;
+}
