# src/app/web-api/models/habit-response.ts
@@ -1,0 +1,6 @@
+/* tslint:disable */
+/* eslint-disable */
+export interface HabitResponse {
+  id?: number;
+  name?: string;
+}
